# llm-benchmark-studio

./: .dockerignore  .env.example  .gitignore  .quality-gate.json  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  PHASE10_PLANNING.md  README.md  app.py  auth.py  benchmark.py  config.yaml  db.py  docker-compose.yml  index.html  job_handlers.py  job_registry.py  keyvault.py  mailer.py  main.py  migrate_to_multiuser.py  mkdocs.yml  provider_params.py  pyproject.toml  schemas.py  sitemap.xml  smart_home_suite.json  ws_manager.py
.audit/: ACCEPTANCE_CRITERIA_CHECKLIST.md  DATABASE_EVALUATION_REPORT.md
.documentation/: erd.html
architecture/: index.html
contributing/: index.html
corpus/: moby_dick.txt
deploy/: docker-compose.prod.yml  docker-compose.staging.yml
docs/: architecture.md  contributing.md  feature-specs-v1.4.md  index.md
e2e/: package-lock.json  package.json  playwright.config.js  run-validation.sh
feature-specs-v1.4/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
routers/: __init__.py  admin.py  analytics.py  auth.py  benchmark.py  config.py  discovery.py  env.py  experiments.py  export_import.py  helpers.py  jobs.py  judge.py  keys.py  leaderboard.py  mcp.py  oauth.py  onboarding.py  param_tune.py  profiles.py  prompt_tune.py  prompt_versions.py  providers.py  schedules.py  settings.py  tool_eval.py  websocket.py
search/: search_index.json
static/: index.html
tests/: conftest.py  test_api_contracts.py  test_app_utils.py  test_auth.py  test_auto_optimize.py  test_benchmark.py  (+28 more)
(+886 files in other folders)
