[project]
name = "llm-benchmarks"
version = "0.1.0"
description = "LLM Benchmark Studio - Measure token/second across providers"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "optuna>=4.7.0",
]

[project.scripts]
benchmark = "benchmark:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
